# vibe-margin-calculator

./: .gitignore  README.md  docker-compose.yml  index.html  package.json  tsconfig.json
admin_frontend/: Dockerfile  package-lock.json  package.json
admin_frontend/src/app/: globals.css  layout.tsx
admin_frontend/src/components/: admin-auth-guard.tsx  admin-bootstrap.tsx  admin-shell.tsx
admin_frontend/src/lib/: admin-api.ts
admin_frontend/src/types/: vendor.d.ts
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  material_seed.py  materials.py  models.py  schemas.py  security.py
backend/tests/: test_admin.py
data/: recipes.db
docs/: api-spec-fastapi.md  api-spec.md  backend-fastapi-setup.md  database-schema.md  dev-checklist-fastapi-nextjs.md  development-plan.md  features.md  frontend-nextjs-setup.md  logic-consistency-review.md  program-analysis.md  project-readiness-index.md  qa-readiness.md  requirements.md  sqlite-schema.md  supabase-setup.md  system-architecture.md  test-cases.md  user-scenarios.md
docs/octo/: octo-plan-prompt-1772771811699.txt
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: cost-calculator.tsx  public-recipe-browser.tsx  recipe-card.tsx  recipe-filter-bar.tsx  recipe-form.tsx  status-banner.tsx
frontend/src/lib/: costing.ts  recipe-api.ts  recipe-form.ts
src/app/: layout.tsx  page.tsx  styles.css
src/app/login/: page.tsx
src/app/recipes/: page.tsx
src/lib/supabase/: client.ts  (+2 more)
(+14 files in other folders)
